log/build_2023-02-03_09-17-45/py_pubsub/stderr.log
  File "/home/malacoda/ros2_ws/install/py_pubsub/lib/python3.8/site-packages/py_pubsub/subscriber_member_function.py", line 19
    from tutorial_interfaces.msg Num
                                 ^
SyntaxError: invalid syntax

